# NNEngine

./: .gitignore  CMakeLists.txt  NoNameEngine.sln  README.md
.github/workflows/: c-cpp.yml
NNE_GameTemplate/: CMakeLists.txt  NNE_GameTemplate.vcxproj
NNE_GameTemplate/include/: PlayerController.h
NNE_GameTemplate/src/: Main.cpp  PlayerController.cpp
NoNameEngine/: AComponent.h  AEntity.cpp  AEntity.h  AScene.cpp  AScene.h  Application.cpp  Application.h  CMakeLists.txt  NoNameEngine.vcxproj  NoNameEngine.vcxproj.filters  VulkanManager.cpp  VulkanManager.h  main.cpp
NoNameEngine/include/: AComponent.h  AEntity.h  Application.h  BoxColliderComponent.h  CameraComponent.h  ColliderComponent.h  MeshComponent.h  MonoComponent.h  PhysicsManager.h  PlaneCollider.h  RigidbodyComponent.h  TransformComponent.h  VulkanManager.h
NoNameEngine/shaders/: frag.spv  shader.frag  shader.vert  vert.spv
NoNameEngine/src/: AComponent.cpp  AEntity.cpp  Application.cpp  BoxColliderComponent.cpp  CameraComponent.cpp  ColliderComponent.cpp  InputManager.cpp  MeshComponent.cpp  PhysicsManager.cpp  PlaneCollider.cpp  RigidbodyComponent.cpp  TransformComponent.cpp  VulkanManager.cpp  main.cpp
NoNameEngine/test/: CMakeLists.txt  test_main.cpp
docs/: architecture.md  risks.md  swot.md
examples/include/: PlayerController.h
examples/solarsystem/include/: CelestialBody.h  FreeCameraController.h
examples/solarsystem/src/: CelestialBody.cpp  FreeCameraController.cpp  Main.cpp
examples/src/: Main.cpp  PlayerController.cpp
scripts/: build.bat  build.sh  install_dependencies.bat  install_dependencies.sh
src/: README.md
src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_vulkan.cpp  imgui_tables.cpp  imgui_widgets.cpp
src/include/: AComponent.h  AEntity.h  AScene.h  Application.h  BoxColliderComponent.h  CameraComponent.h  ColliderComponent.h  DebugOverlay.h  IDebugUI.h  ISystem.h  InputComponent.h  InputManager.h  InputSystem.h  LightComponent.h  LightSystem.h  Material.h  MeshComponent.h  MonoComponent.h  PerformanceMetrics.h  PhysicsManager.h  PhysicsSystem.h  PlaneCollider.h  RenderSystem.h  RigidbodyComponent.h  ScriptSystem.h  SphereCollider.h  SystemManager.h  TransformComponent.h  UISystem.h  VulkanManager.h  imgui.h  imgui_impl_glfw.h  imgui_impl_vulkan.h
src/shaders/: compile.bat  compile.sh  frag.spv  shader.frag  shader.vert  shadow.vert  vert.spv
src/src/: AComponent.cpp  AEntity.cpp  AScene.cpp  Application.cpp  BoxColliderComponent.cpp  CameraComponent.cpp  ColliderComponent.cpp  DebugOverlay.cpp  InputManager.cpp  InputSystem.cpp  LightComponent.cpp  LightSystem.cpp  Material.cpp  MeshComponent.cpp  MonoComponent.cpp  PerformanceMetrics.cpp  PhysicsManager.cpp  PhysicsSystem.cpp  PlaneCollider.cpp  RenderSystem.cpp  RigidbodyComponent.cpp  ScriptSystem.cpp  SphereCollider.cpp  SystemManager.cpp  TransformComponent.cpp  UISystem.cpp  VulkanManager.cpp
tests/: test_main.cpp
